test/invalid/TestPonto/TestPonto.plume
/**
 * 
 * Tem um ponto e virgula no fim
 * @author 37060, Roberto Silva
 */
class TestPonto extends Object is
	
	method main -> String is
    	"Ola";